--- a/plano/app.json
+++ b/plano/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "plano-de-estudos",
-    "slug": "plano-de-estudos",
+    "name": "plano",
+    "slug": "plano",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
